Fix up socket.io connection error

--- a/home/templates/layout/base.html
+++ b/home/templates/layout/base.html
@@ -997,11 +997,11 @@
 <link type="text/css" href="{% static 'assets/vendor_assets/css/toastr.css' %}" rel="stylesheet">
 
 
-<script src="http://localhost:3000/socket.io/socket.io.js"></script>
+<script src="https://booctep.com/socket.io/socket.io.js"></script>
 
 <script type="text/javascript">
 
-    var socket = io.connect('http://localhost:3000')
+    var socket = io.connect('https://booctemp.com')
     var id = '{{ request.user.id }}'
     console.log("current my id:::", id)
 
