--- a/home/templates/test.html
+++ b/home/templates/test.html
@@ -323,7 +323,7 @@
         $('#show-video').modal('show')
         let url = $(obj).parent().parent().parent().data('src')
         console.log("url:::", url)
-        $("#videoTag").attr('src', 'http://localhost:8000/static' + url)
+        $("#videoTag").attr('src', 'https://booctep.com/static' + url)
     }
 
     const sendNoti = () => {
